@@ -92,11 +92,11 @@ namespace MonoDevelop.SourceEditor.Gui
 		IEditable, IPositionable, IBookmarkOperations, IDebuggableEditor
 	{
 
-		internal FileSystemWatcher fsw;
+		//internal FileSystemWatcher fsw;
 	
 		internal SourceEditor se;
 
-		void UpdateFSW (object o, EventArgs e)
+		/*void UpdateFSW (object o, EventArgs e)
 		{
 			if (ContentName == null || ContentName.Length == 0)
 				return;
@@ -128,7 +128,7 @@ namespace MonoDevelop.SourceEditor.Gui
 			if (e.ResponseId == ResponseType.Yes)
 				Load (ContentName);
 			((Gtk.Window)o).Hide ();
-		}
+		}*/
 
 		public void ExecutingAt (int line)
 		{
@@ -167,9 +167,9 @@ namespace MonoDevelop.SourceEditor.Gui
 			PropertyService propertyService = (PropertyService) ServiceManager.GetService (typeof (PropertyService));
 			IProperties properties2 = ((IProperties) propertyService.GetProperty("MonoDevelop.TextEditor.Document.Document.DefaultDocumentAggregatorProperties", new DefaultProperties()));
 			properties2.PropertyChanged += new PropertyEventHandler (PropertiesChanged);
-			fsw = new FileSystemWatcher ();
+		/*	fsw = new FileSystemWatcher ();
 			fsw.Changed += new FileSystemEventHandler (OnFileChanged);
-			UpdateFSW (null, null);
+			UpdateFSW (null, null);*/
 		}
 
 		public void JumpTo (int line, int column)
@@ -208,10 +208,10 @@ namespace MonoDevelop.SourceEditor.Gui
 		{
 		}
 		
-		public override void Dispose()
+		/*public override void Dispose()
 		{
 			fsw.Dispose ();
-		}
+		}*/
 		
 		void OnModifiedChanged (object o, EventArgs e)
 		{
